--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -5,27 +5,29 @@ img{
 }
 ul{
     
-    margin-top: 5%;
+ margin-top: 5%;
  
     list-style-type: none;
     color:cornsilk;
-    padding-right: 20px;
+   
 }
    
- li{
-     padding-top: 20px;
- }
+ 
 
 
 
  .navbar__list{
-   
-    background-color: blue;
+    
+    background-color: rgb(0, 174, 255);
     position: fixed;
     top:0;
     bottom:0;
-    left:70%;
- 
+    left:60%;
+    width: 40%;
+    z-index: -1;
 
+ }
 
+ .navbar__list__none{
+     display:none;
  }
