--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -1,3 +1,31 @@
 .intro__image{
+    position: absolute;
     width: 100%;
+    z-index: -4;
+    top: 40%;
+    left: 2%;
+  
+}
+
+.intro__text{
+    position: absolute;
+   top:15%;
+    font-size: 20px;
+    left: 15%;
+    z-index: -4;
+}
+
+@media only screen and (min-width: 768px){
+
+    .intro__image{
+        top: 30%;
+        width: 60%;
+        left: 25%;
+       
+    }
+
+    .intro__text{
+        font-size: 25px;
+    }
+
 }
