--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,6 +1,10 @@
 .navbar__image{
  
   float: right; 
+  position:fixed;
+  right: 2%;
+  z-index: 3;
+  width: 6%;
 
 }
 .navbar__list__names{
@@ -24,7 +28,7 @@
     bottom:0;
     left:60%;
     width: 40%;
-    z-index: -1;
+    z-index:2;
 
  }
 
