--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -7,25 +7,30 @@
 }
 
 
-.about{
+.about__parent{
     display: grid;
     place-items: center;
+    margin-top: 5em;
 }
 
 .about__profile{
-    width: 50%;
+    width: 40%;
 }
 
 @media only screen and (min-width: 768px){
 
-   
+    .about__parent{
+        justify-content: space-around;
+        flex-direction: row-reverse;
+        margin-top: 5em;
+    }
 
     .about__profile{
-        width: 25%;
-        top:115%;
+        width: 20%;
+        
     }
     .about__text{
-        top: 120%;
+        
         font-size: 20px;
     }
      
