--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -21,8 +21,9 @@
         background-color:blue;
         color:white ;
       }
-      .work_subheading{
+      .work__subheading{
 
          display:flex;
+         
          }
    
