--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -7,12 +7,59 @@
 }
 .contact__icons img {
     
-    margin-left: 30px;
+    margin-left: 35px;
     width: 50px;
+    margin-top: 3%;
     
 }
 
 .contact__header{
     margin-top: 10%;
+    margin-left: 45%;
 
 }
+.button {
+    border-radius: 4px;
+    background-color: blue;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 25px;
+    padding: 10px;
+    
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+    border-radius: 60px;
+    width: 50%;
+    margin-left: 25%;
+    height: 8vh;
+    margin-top:2% ;
+  }
+  
+  .button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  .button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+  
+  .button:hover span {
+    padding-right: 25px;
+  }
+  
+  .button:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
+
+  
