--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -33,3 +33,12 @@
     margin-top: 50%;
     margin-left: 45%;
     }
+
+    @media only screen and (min-width: 768px){
+    
+    .work__child{
+      display: flex;
+      justify-content: space-around;
+      margin-top: 2%
+    }
+  }
