--- a/src/components/projects/project.css
+++ b/src/components/projects/project.css
@@ -27,9 +27,14 @@
     }
 
     .project__profile{
-        width: 20%;
+        width: 30%;
+        transition: transform .2s; 
         
     }
+    .project__profile:hover{
+        transform: scale(1.3);
+    }
+
     .project__text{
         
         font-size: 20px;
