--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -2,7 +2,7 @@
     
         transition-duration: 0.4s;
         background-color:white;
-        color:blue;
+        color:rgb(0, 132, 255);
         width: 250px;
         border: none;
         border: 0ch;
@@ -18,7 +18,7 @@
       
         .work__button:hover {
       
-        background-color:blue;
+        background-color:rgb(0, 132, 255);
         color:white ;
       }
     
@@ -33,6 +33,19 @@
     margin-top: 50%;
     margin-left: 45%;
     }
+    .work__para{
+      width: 60%;
+
+    }
+    .work__para_parent{
+      display: grid;
+      place-items:center;
+    }
+    .work__child{
+      display: grid;
+      place-items: center;
+    
+    }
    
    
     @media only screen and (min-width: 768px){
@@ -43,9 +56,7 @@
       margin-top: 2%;
     
     }
-    .work__para p{
-      width:10px;
-    }
+    
     .work__child h6{
       font-size: 17px;
     }
