--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -7,10 +7,10 @@
   
 }
 
-.intro__text{
+.intro__text h1{
     position: absolute;
-   top:15%;
-    font-size: 10px;
+   top:12%;
+    font-size: 22px;
     left: 15%;
    
 }
@@ -29,8 +29,8 @@
        
     }
 
-    .intro__text{
-        font-size: 15px;
+    .intro__text h1{
+        font-size: 32px;
     }
 
 }
