--- a/src/components/projects/project.css
+++ b/src/components/projects/project.css
@@ -16,7 +16,15 @@
 .project__profile{
     width: 40%;
 }
+.project__changes{
+    display: grid;
+    place-items: center;
+    margin-top: 5em;
+}
 
+.project__text h3{
+    font-size: 25px;
+}
 @media only screen and (min-width: 768px){
 
     .project__parent{
